--- a/views/index.html
+++ b/views/index.html
@@ -149,7 +149,7 @@
                         <p>BSc. Telecommunications Engineering</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 hello">
                     <h4>Languages</h4>
                     <ul>
                         <li>English</li>
