--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,22 +24,25 @@ li{
     margin-top: 1rem;
     display: flex;
 }
-
-.profile-pic{
+img{
+    display: block;
+    max-width: 100%;
+}
+/* .profile-pic{
     padding: 1em 1em;
     border-radius: 20rem;
     /* display: block;  */
-    width: 20%;
-}
+    /* width: 20%; */
+} */
 
-@media (min-width: 900px){
+/* @media (min-width: 900px){
     .profile-pic{
         padding: 1em 1em;
         border-radius: 20rem;
         /* display: block;  */
-        width: 20%;
+        /* width: 20%; */
     }
-}
+} */
 
 .myname{
     padding-left: 1em;
