--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,11 +69,11 @@ img{
     margin-bottom: 1em;
 }
 
-/* .zurilogo{
+.zurilogo{
     padding-left: 5em;
     display: block;
     width: 40%;
-} */
+}
 
 .contact-form{
     padding-left: 6em;
