--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ head
   title Sylvia Boonabaana Resume
   link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We' crossorigin='anonymous')
   link(rel='stylesheet' href='css/style.css')
-.resume-container
+.resume-container.container
   // Header
   header.resume-header
     .profile-img
