--- a/views/index.pug
+++ b/views/index.pug
@@ -8,20 +8,22 @@ head
   link(rel='stylesheet' href='css/style.css')
 .resume-container.container
   // Header
-  header.resume-header
-    .profile-img
-      img.profile-pic(src='img/sylvy1.jpg' alt='')
-    .myname
-      h1.fullname Sylvia Boonabaana
-      p.profession Software Developer
+  .row
+    header.resume-header
+      .profile-img
+        img.profile-pic(src='img/sylvy1.jpg' alt='')
+      .myname
+        h1.fullname Sylvia Boonabaana
+        p.profession Software Developer
   // Contact section
-  section.contacts
-    hr.contact-linebreak
-    .contact-container
-      p.contact-text sylviabooan2@gmail.com
-      p.contact-text +256789587888
-      p.contact-text Uganda
-    hr.contact-linebreak
+  .row
+    section.contacts
+      hr.contact-linebreak
+      .contact-container
+        p.contact-text sylviabooan2@gmail.com
+        p.contact-text +256789587888
+        p.contact-text Uganda
+      hr.contact-linebreak
   // Profile Summary
   section.profile-summary
     .row.section-container
