--- a/views/index.pug
+++ b/views/index.pug
@@ -142,5 +142,9 @@ head
           input.form-control(type='text' name='email' placeholder='Email')
           input.form-control(type='text' name='question' placeholder='Question')
           input.form-control.btn-secondary(type='submit' value='Submit')
-      .col-6
+      .col-2.logo
         img(src="img/zurilogo1.jpg", alt="", class="zurilogo")
+      .col-2
+        img(src="img/zurilogo2.jpg", alt="", class="zurilogo")
+      .col-2
+        img(src="img/zurilogo3.jpg", alt="", class="zurilogo")
