--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,10 +86,10 @@ li{
         padding: 0;
         margin: 0;
     }
-    /* .myname{
+    .myname{
         padding-left: 1em;
-        margin-top: 4em;
-    } */
+        margin-top: 2em;
+    }
   }
 
 .zurilogo{
