--- a/views/index.pug
+++ b/views/index.pug
@@ -37,13 +37,12 @@ head
           | forward to making a significant contribution to an institution that offers a genuine opportunity
           | for
       .col-4
-        h4 Other Skills
+        h4 Professional Skills
         ul
-          li Team leadership
-          li Analytic Problem Solving
-          li Critical Thinking
+          li Web Development
+          li Mobile app development
+          li User Research
           li Agile Project Management
-          li Community Engagement in problem solvingL
   // Work Experience
   section.work-experience
     .row.section-container
@@ -96,6 +95,9 @@ head
               | Was selected to represent my team at the Massachusetts Institute of Technology annual
               | iLabs Workshop.
       .col-4
+        br
+        br
+        br
         h4 Technical Skills
         ul
           li HTML/CSS/JavaScript
