--- a/views/index.pug
+++ b/views/index.pug
@@ -144,7 +144,7 @@ head
           input.form-control(type='text' name='email' placeholder='Email')
           input.form-control(type='text' name='question' placeholder='Question')
           input.form-control.btn-secondary(type='submit' value='Submit')
-      .col-2.logo
+      .col-2
         img(src="img/zurilogo1.jpg", alt="", class="zurilogo")
       .col-2
         img(src="img/zurilogo2.jpg", alt="", class="zurilogo")
