--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,12 @@ li{
 .form-control{
     margin-bottom: 1em;
 }
+
+.zurilogo{
+    padding-left: 2em;
+    display: block;
+    width: 100%; 
+}
 @media only screen and (max-width: 620px) {
     /* For mobile phones: */
     .profile-pic, .col-8, .col-6, .col-4, .contact-text {
@@ -91,15 +97,11 @@ li{
         margin-top: 2em;
     }
     .zurilogo{
-        padding-left: 1em;
-        display: block;
-        width: 50%; 
+        padding-left: 2em;
+        /* display: block; */
+        width: 200%; 
     }
   }
 
 
-.zurilogo{
-    padding-left: 2em;
-    display: block;
-    width: 100%; 
-}
+
